fix: Changed project name wrapping rules

--- a/client/src/components/Projects/Projects.module.scss
+++ b/client/src/components/Projects/Projects.module.scss
@@ -63,8 +63,7 @@
     -webkit-line-clamp: 4;
     overflow: hidden;
     text-overflow: ellipsis;
-    word-break: break-word;
-    hyphens: auto;
+    word-break: break-all;
   }
 
   .notification {
